--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,20 @@
     "email": "broyard.dev@gmail.com",
     "url": "https://github.com/Julien-Broyard/twetter/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.16.4",
+    "helmet": "^3.16.0",
+    "pino": "^5.12.0",
+    "pino-pretty": "^2.6.0"
+  },
   "description": "A small and basic twitter clone made with MERN stack.",
   "devDependencies": {
+    "@types/compression": "^0.0.36",
+    "@types/express": "^4.16.1",
+    "@types/helmet": "^0.0.43",
+    "@types/node": "^11.13.0",
+    "@types/pino": "^5.8.6",
     "cross-env": "^5.2.0",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.4.1"
