--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "pino": "^5.12.0",
@@ -24,7 +25,6 @@
     "@types/helmet": "^0.0.43",
     "@types/node": "^11.13.0",
     "@types/pino": "^5.8.6",
-    "cross-env": "^5.2.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "ts-node-dev": "^1.0.0-pre.32",
@@ -46,7 +46,7 @@
     "url": "https://github.com/Julien-Broyard/twetter"
   },
   "scripts": {
-    "build": "yarn lint && tsc",
+    "build": "tsc",
     "dev": "tsnd --respawn src/index.ts",
     "lint": "yarn tslint && yarn prettier",
     "pre-commit": "yarn lint",
