--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/compression": "^0.0.36",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/helmet": "^0.0.43",
     "@types/node": "^11.13.0",
