--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
+    "mongoose": "^5.4.21",
     "pino": "^5.12.0",
     "pino-pretty": "^2.6.0"
   },
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/helmet": "^0.0.43",
+    "@types/mongoose": "^5.3.24",
     "@types/node": "^11.13.0",
     "@types/pino": "^5.8.6",
     "husky": "^1.3.1",
