--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,9 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "baseUrl": "./src",
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "lib": ["dom", "esnext"],
     "module": "commonjs",
     "moduleResolution": "node",
