--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/Julien-Broyard/twetter/issues"
   },
   "dependencies": {
+    "argon2": "^0.21.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
