--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "mongoose": "^5.4.21",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pino": "^5.12.0",
     "pino-pretty": "^2.6.0"
   },
@@ -29,6 +31,8 @@
     "@types/helmet": "^0.0.43",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^11.13.0",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/pino": "^5.8.6",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
