--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,14 +3,13 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "baseUrl": "./src",
-    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
     "lib": ["dom", "esnext"],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
     "pretty": true,
+    "resolveJsonModule": true,
     "strict": true,
     "target": "es6"
   },
