--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,25 @@
 FROM node:11.10-alpine
 
-WORKDIR /usr/src/app
+RUN mkdir /app
+
+WORKDIR /app
 
 COPY ["package.json", "yarn.lock", "./"]
 
-RUN yarn install
+RUN apk --no-cache --virtual build-dependencies add \
+  python \
+  make \
+  g++ \
+  && yarn install \
+  && yarn global add typescript ts-node-dev \
+  && apk del build-dependencies
 
 COPY . .
 
+RUN yarn build
+
+ENV NODE_ENV production
+
 EXPOSE 8080
 
-CMD yarn start:prod
+CMD ["yarn", "start"]
