--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "mongoose": "^5.4.21",
@@ -60,7 +59,7 @@
     "lint": "yarn tslint && yarn prettier",
     "pre-commit": "yarn lint",
     "prettier": "prettier --write \"{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
-    "start:prod": "cross-env NODE_ENV=production yarn build && node dist/index.js",
+    "start": "node dist/index.js",
     "tslint": "tslint --project tsconfig.json --fix"
   },
   "version": "1.0.0"
