--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "argon2": "^0.21.0",
     "body-parser": "^1.18.3",
+    "boom": "^7.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -24,6 +25,7 @@
   "description": "A small and basic twitter clone made with MERN stack.",
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/boom": "^7.2.1",
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
