--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -30,6 +31,7 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/helmet": "^0.0.43",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^11.13.0",
     "@types/passport": "^1.0.0",
