--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pino": "^5.12.0",
-    "pino-pretty": "^2.6.0"
+    "pino-pretty": "^2.6.0",
+    "validator": "^10.11.0"
   },
   "description": "A small and basic twitter clone made with MERN stack.",
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/pino": "^5.8.6",
+    "@types/validator": "^10.11.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "ts-node-dev": "^1.0.0-pre.32",
