--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-pino-logger": "^4.0.0",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
