--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
+    "node-statsd": "^0.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pino": "^5.12.0",
     "pino-pretty": "^2.6.0",
+    "response-time": "^2.3.2",
     "validator": "^10.11.0"
   },
   "description": "A small and basic twitter clone made with MERN stack.",
@@ -36,9 +38,11 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.24",
     "@types/node": "^11.13.0",
+    "@types/node-statsd": "^0.1.2",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/pino": "^5.8.6",
+    "@types/response-time": "^2.3.3",
     "@types/validator": "^10.11.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
