--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
     "url": "https://github.com/Julien-Broyard/twetter/issues"
   },
   "dependencies": {
+    "@vizuaalog/bulmajs": "^0.9.1",
+    "bulma": "^0.7.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
@@ -30,6 +33,7 @@
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.6",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.4.1"
   },
   "eslintConfig": {
